force-app/main/default/objects/Exhibition_Region_Owner__c/Exhibition_Region_Owner__c.object-meta.xml
<CustomObject>
    <label>展会区组负责人</label>
    <nameField>
        <label>姓名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>展会区组负责人</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>