force-app/main/default/objects/Exhibition_Region_Owner__c/fields/Counry__c.field-meta.xml
<CustomField>
    <fullName>Counry__c</fullName>
    <label>国家</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Primary_Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Exhibition_Country</valueSetName>
    </valueSet>
</CustomField>