force-app/main/default/objects/Exhibition_Region_Owner__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>邮箱</label>
    <type>Email</type>
</CustomField>