force-app/main/default/objects/Exhibition_Region_Owner__c/fields/Personnel_Scope_Code__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Scope_Code__c</fullName>
    <label>人事范围代码</label>
    <length>255</length>
    <type>Text</type>
</CustomField>