force-app/main/default/objects/Exhibition_Region_Owner__c/fields/Primary_Department__c.field-meta.xml
<CustomField>
    <fullName>Primary_Department__c</fullName>
    <label>所属区域</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America Region</fullName>
                <label>美洲地区 America Region</label>
            </value>
            <value>
                <fullName>Europe Region</fullName>
                <label>欧洲地区 Europe Region</label>
            </value>
            <value>
                <fullName>Mid-East &amp; Africa Region</fullName>
                <label>中东和非洲地区 Mid-East &amp; Africa Region</label>
            </value>
            <value>
                <fullName>Asia-Pacific Region</fullName>
                <label>亚太地区 Asia-Pacific Region</label>
            </value>
            <value>
                <fullName>Japan Region</fullName>
                <label>日本地区 Japan Region</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>