force-app/main/default/objects/Exhibition_Region_Owner__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>产品线</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exhibition_Product_Line</valueSetName>
    </valueSet>
</CustomField>