force-app/main/default/objects/Exhibition_Region_Owner__c/fields/Secondary_Department__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Department__c</fullName>
    <label>二级部门</label>
    <length>255</length>
    <type>Text</type>
</CustomField>