force-app/main/default/objects/Exhibition_Region_Owner__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>关联用户</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exhibition_Region_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>