force-app/main/default/objects/Exhibition_Region_Owner__c/fields/Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_Month__c</fullName>
    <label>年月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>